# glm

./: CMakeLists.txt  readme.md
cmake/: CMakeLists.txt
glm/: CMakeLists.txt  glm.hpp
glm/core/: _literals.hpp  _vectorize.hpp  dummy.cpp  func_common.hpp  func_common.inl  setup.hpp  type_half.hpp  type_half.inl  type_int.hpp  type_vec2.hpp  type_vec3.hpp  type_vec3.inl
glm/detail/: dummy.cpp  setup.hpp  type_vec4.hpp  type_vec4.inl  type_vec4_simd.inl
glm/ext/: scalar_packing.hpp  scalar_packing.inl  vector_color.hpp  vector_color.inl  vector_packing.hpp  vector_packing.inl
glm/gtc/: angle.hpp  angle.inl  packing.hpp  packing.inl  quaternion.hpp
glm/gtx/: area.hpp  area.inl  intersect.hpp  intersect.inl  vector_query.hpp  vector_query.inl
test/: CMakeLists.txt
test/core/: CMakeLists.txt  core_amp.cpp  core_type_vec4.cpp
test/ext/: CMakeLists.txt  ext_scalar_packing.cpp  ext_vector_color.cpp  ext_vector_packing.cpp
test/gtc/: gtc_packing.cpp
test/gtx/: CMakeLists.txt  gtx_area.cpp  gtx_intersect.cpp  gtx_vector_query.cpp
